--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,10 @@ read_subsets/
 trycycler/
 assemblies/
 .DS_Store
+kraken.report1
+unicycler/
+Helicobacter pylori bvbrc.embl
+Helicobacter pylori hp2.xls
+full_script.sh
+1.debai/
+
